--- a/beltreview/apps/review/templates/review/add.html
+++ b/beltreview/apps/review/templates/review/add.html
@@ -14,7 +14,7 @@
     {% if messages %}
     <div class="messages">
         {% for message in messages %}
-        <p>{{ messages }}</p>
+        <p>{{ message }}</p>
         {% endfor %}
     </div>
     {% endif %}
@@ -22,7 +22,7 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="title">Book Title: </label>
-            <input type="text" name ="title">
+            <input type="text" name="title">
         </div>
         <div class="form-group">
             <label for="author">Author: </label>
